--- a/Kitodo-ImageManagementModule/pom.xml
+++ b/Kitodo-ImageManagementModule/pom.xml
@@ -22,7 +22,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <name>Kitodo - Image Management Module</name>
-    <artifactId>kitodo-ImageManagementModule</artifactId>
+    <artifactId>kitodo-image-management</artifactId>
 
     <dependencies>
         <dependency>
