added possibility to create dummy image files after process creation

--- a/Kitodo/src/main/resources/kitodo_config.properties
+++ b/Kitodo/src/main/resources/kitodo_config.properties
@@ -163,6 +163,11 @@ ImagePrefix=\\d{8}
 #       image names, all characters are supported
 ImageSorting=number
 
+# set true if dummy images needs to be created after creation of new process
+# in order to start with pagination editing without existing real images.
+# Number of files will be taken from guessed images value.
+createDummyImagesAtProcessCreation=true
+
 doneDirectoryName=fertig/
 
 
