moved creation of dummyimages to editor, added path to dummy image file to config

--- a/Kitodo/src/main/resources/kitodo_config.properties
+++ b/Kitodo/src/main/resources/kitodo_config.properties
@@ -163,6 +163,10 @@ ImagePrefix=\\d{8}
 #       image names, all characters are supported
 ImageSorting=number
 
+# Insert a path to an tif image which is taken as dummy images for a process
+# in order to start with pagination editing.
+dummyImagePath=C:/dev/local/images/dummyImage.tif
+
 # set true if dummy images needs to be created after creation of new process
 # in order to start with pagination editing without existing real images.
 # Number of files will be taken from guessed images value.
