--- a/Kitodo/src/main/resources/kitodo_config.properties
+++ b/Kitodo/src/main/resources/kitodo_config.properties
@@ -165,12 +165,7 @@ ImageSorting=number
 
 # Insert a path to an tif image which is taken as dummy images for a process
 # in order to start with pagination editing.
-dummyImagePath=C:/dev/local/images/dummyImage.tif
-
-# set true if dummy images needs to be created after creation of new process
-# in order to start with pagination editing without existing real images.
-# Number of files will be taken from guessed images value.
-createDummyImagesAtProcessCreation=true
+dummyImagePath=/usr/local/images/dummyImage.tif
 
 doneDirectoryName=fertig/
 
