Add exclusion for conflicting poi library

--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -493,6 +493,10 @@
                     <artifactId>itext</artifactId>
                 </exclusion>
                 <exclusion>
+                    <groupId>poi</groupId>
+                    <artifactId>poi</artifactId>
+                </exclusion>
+                <exclusion>
                     <artifactId>spring</artifactId>
                     <groupId>org.springframework</groupId>
                 </exclusion>
