--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -175,14 +175,8 @@
         </dependency>
         <dependency>
             <groupId>net.sf.barcode4j</groupId>
-            <artifactId>barcode4j-fop-ext-complete</artifactId>
-            <version>2.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>*</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
+            <artifactId>barcode4j-fop-ext</artifactId>
+            <version>2.1</version>
         </dependency>
         <dependency>
             <groupId>org.camunda.bpm.model</groupId>
