Use Helper for data formatting and unify format for storage in index

--- a/Kitodo/src/main/resources/mapping.json
+++ b/Kitodo/src/main/resources/mapping.json
@@ -206,7 +206,8 @@
                     }
                 },
                 "endDate": {
-                    "type": "date"
+                    "type": "date",
+                    "format":"yyyy-MM-dd HH:mm:ss"
                 },
                 "fileFormatDmsExport": {
                     "type": "text",
@@ -314,7 +315,8 @@
                     }
                 },
                 "startDate": {
-                    "type": "date"
+                    "type": "date",
+                    "format":"yyyy-MM-dd HH:mm:ss"
                 },
                 "title": {
                     "type": "text",
@@ -395,7 +397,8 @@
                     }
                 },
                 "creationDate": {
-                    "type": "date"
+                    "type": "date",
+                    "format":"yyyy-MM-dd HH:mm:ss"
                 },
                 "docket": {
                     "type": "long"
@@ -559,7 +562,8 @@
                     }
                 },
                 "creationDate": {
-                    "type": "date"
+                    "type": "date",
+                    "format":"yyyy-MM-dd HH:mm:ss"
                 },
                 "docket": {
                     "type": "long"
@@ -741,13 +745,16 @@
                     "type": "long"
                 },
                 "processingTime": {
-                    "type": "date"
+                    "type": "date",
+                    "format":"yyyy-MM-dd HH:mm:ss"
                 },
                 "processingBegin": {
-                    "type": "date"
+                    "type": "date",
+                    "format":"yyyy-MM-dd HH:mm:ss"
                 },
                 "processingEnd": {
-                    "type": "date"
+                    "type": "date",
+                    "format":"yyyy-MM-dd HH:mm:ss"
                 },
                 "processingUser": {
                     "type": "long"
@@ -878,7 +885,8 @@
             "dynamic": "strict",
             "properties": {
                 "creationDate": {
-                    "type": "date"
+                    "type": "date",
+                    "format":"yyyy-MM-dd HH:mm:ss"
                 },
                 "processes": {
                     "properties": {
