--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -184,8 +184,12 @@
             <artifactId>camunda-bpmn-model</artifactId>
             <version>7.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.passay</groupId>
+            <artifactId>passay</artifactId>
+            <version>1.3.1</version>
+        </dependency>
 
-        <!--https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java-->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-firefox-driver</artifactId>
