--- a/Kitodo-FileManagement/pom.xml
+++ b/Kitodo-FileManagement/pom.xml
@@ -105,7 +105,7 @@
                                     <goal>copy-resources</goal>
                                 </goals>
                                 <configuration>
-                                    <outputDirectory>${moduleFolder}</outputDirectory>
+                                    <outputDirectory>${directory.modules}</outputDirectory>
                                     <resources>
                                         <resource>
                                             <directory>../Kitodo/modules/</directory>
