--- a/Kitodo-FileManagement/src/test/resources/kitodo_config.properties
+++ b/Kitodo-FileManagement/src/test/resources/kitodo_config.properties
@@ -11,8 +11,8 @@
 # Absolute path to the directory that process directories will be created in,
 # terminated by a directory separator ("/").
 # The servlet container must have write permission to that directory.
-MetadatenVerzeichnis=src/test/resources/
-moduleFolder=../Kitodo/modules/
+directory.metadata=src/test/resources/
+directory.modules=../Kitodo/modules/
 # Script to create a symbolic link in the user home directory and set
 # permissions for the user
 script_createSymLink=src/test/resources/scripts/script_createSymLink.sh
