--- a/Kitodo/src/test/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/kitodo_config.properties
@@ -11,19 +11,19 @@
 # Absolute path to the directory that process directories will be created in,
 # terminated by a directory separator ("/").
 # The servlet container must have write permission to that directory.
-MetadatenVerzeichnis=src/test/resources/
-RegelsaetzeVerzeichnis=src/test/resources/rulesets/
+directory.metadata=src/test/resources/
+directory.rulesets=src/test/resources/rulesets/
 # Absolute path to the directory that XSLT files are stored in which are used
 # to transform the "XML log" (as visible from the XML button in the processes
 # list) to a downloadable PDF docket which can be enclosed with the physical
 # binding units to digitise.
 # The path must be terminated by a directory separator ("/").
-xsltFolder=src/test/resources/xslt/
+directory.xslt=src/test/resources/xslt/
 # Filename of the XSLT file for transforming old metadata files which need to
 # be in the xslt folder above
 xsltFilenameMetadataTransformation=MetsModsGoobi_to_MetsKitodo.xsl
 # Path to directory in which BPMN diagrams are stored
-diagramsFolder=src/test/resources/diagrams/
+directory.diagrams=src/test/resources/diagrams/
 # Script to create the directory for a new process
 script_createDirMeta=src/test/resources/scripts/script_createDirMeta.sh
 script_createDirUserHome=src/test/resources/scripts/script_createDirUserHome.sh
@@ -37,12 +37,12 @@ image.prefix=.*
 # backup of metadata configuration
 # -----------------------------------
 numberOfMetaBackups=2
-moduleFolder=modules/
+directory.modules=modules/
 elasticsearch.port=9205
 elasticsearch.index=testindex
 elasticsearch.useAuthentication=false
-KonfigurationVerzeichnis=src/test/resources/
-dir_Users=src/test/resources/userdata/
+directory.config=src/test/resources/
+directory.users=src/test/resources/userdata/
 
 metsEditor.lockingTime=2
 
