Rename config parameters for directories - more uinfied

--- a/Kitodo/src/main/resources/kitodo_config.properties
+++ b/Kitodo/src/main/resources/kitodo_config.properties
@@ -22,23 +22,23 @@
 #       You may want to decide to point this path to the directory where
 #       the servlet container will extract the configuration files to (like
 #       webapps/kitodo/WEB-INF/classes) in order to make sure they are found.
-KonfigurationVerzeichnis=/usr/local/kitodo/config/
+directory.config=/usr/local/kitodo/config/
 
 # Absolute path to the directory that the rule set definition files will be
 # read from. It must be terminated by a directory separator ("/").
-RegelsaetzeVerzeichnis=/usr/local/kitodo/rulesets/
+directory.rulesets=/usr/local/kitodo/rulesets/
 
 # Absolute path to the directory that XSLT files are stored in which are used
 # to transform the "XML log" (as visible from the XML button in the processes
 # list) to a downloadable PDF docket which can be enclosed with the physical
 # binding units to digitise.
 # The path must be terminated by a directory separator ("/").
-xsltFolder=/usr/local/kitodo/xslt/
+directory.xslt=/usr/local/kitodo/xslt/
 
 # Absolute path to the directory that process directories will be created in,
 # terminated by a directory separator ("/").
 # The servlet container must have write permission to that directory.
-MetadatenVerzeichnis=/usr/local/kitodo/metadata/
+directory.metadata=/usr/local/kitodo/metadata/
 
 # Absolute path to the base directory of the users' home directories,
 # terminated by a directory separator ("/").
@@ -47,27 +47,27 @@ MetadatenVerzeichnis=/usr/local/kitodo/metadata/
 # a symbolic link to the process directory in question will be created in his
 # or her home directory that will be removed again after finishing the task.
 # Note: If LDAP is used, the users' home dirs will instead be read from LDAP
-dir_Users=/usr/local/kitodo/users/
+directory.users=/usr/local/kitodo/users/
 
 # Absolute path to a folder the application can temporarily create files in,
 # terminated by a directory separator ("/").
-tempfolder=/usr/local/kitodo/temp/
+directory.temp=/usr/local/kitodo/temp/
 
 # Path to directory in which BPMN diagrams are stored
-diagramsFolder=/usr/local/kitodo/diagrams/
+directory.diagrams=/usr/local/kitodo/diagrams/
 
 # Module configuration
-moduleFolder=/usr/local/kitodo/modules/
+directory.modules=/usr/local/kitodo/modules/
 
 # Absolute path to the plugins directory,
 # terminated by a directory separator ("/").
 # The plugins directory must contain a subfolder for each plugin type, which
 # must be named "command", "import", "opac", "step" and "validation", resp.
 # In each folder .jar files containing plugin implementations can be placed.
-pluginFolder=/usr/local/kitodo/plugins/
+directory.plugins=/usr/local/kitodo/plugins/
 
 # Falls Dateien zum Debuggen / Tracen geschrieben werden sollen, hier ein Verzeichnis angeben
-debugFolder=/usr/local/kitodo/debug/
+directory.debug=/usr/local/kitodo/debug/
 
 
 # -----------------------------------
@@ -178,7 +178,7 @@ doneDirectoryName=fertig/
 # Note: If this directory DOESN'T EXIST, the internal resource bundles will be
 #       used. If this directory exists BUT DOES NOT CONTAIN suitable resources,
 #       the screens will not work as expected.
-localMessages=/usr/local/kitodo/messages/
+directory.messages=/usr/local/kitodo/messages/
 
 # Start-up language: If not set, Kitodo.Production will start up with the
 # language best matching the user's Accept-Languages HTTP Request header. You
