--- a/Kitodo/src/test/resources/selenium/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/selenium/resources/kitodo_config.properties
@@ -27,25 +27,25 @@
 #       You may want to decide to point this path to the directory where
 #       the servlet container will extract the configuration files to (like
 #       webapps/kitodo/WEB-INF/classes) in order to make sure they are found.
-KonfigurationVerzeichnis=../../../../src/test/resources/
+directory.config=../../../../src/test/resources/
 # Absolute path to the directory that the rule set definition files will be
 # read from. It must be terminated by a directory separator ("/").
-RegelsaetzeVerzeichnis=../../../../src/test/resources/rulesets/
+directory.rulesets=../../../../src/test/resources/rulesets/
 # Absolute path to the directory that XSLT files are stored in which are used
 # to transform the "XML log" (as visible from the XML button in the processes
 # list) to a downloadable PDF docket which can be enclosed with the physical
 # binding units to digitise.
 # The path must be terminated by a directory separator ("/").
-xsltFolder=../../../../src/test/resources/xslt/
+directory.xslt=../../../../src/test/resources/xslt/
 # Filename of the XSLT file for transforming old metadata files which need to
 # be in the xslt folder above
 xsltFilenameMetadataTransformation=MetsModsGoobi_to_MetsKitodo.xsl
 # Absolute path to the directory that process directories will be created in,
 # terminated by a directory separator ("/").
 # The servlet container must have write permission to that directory.
-MetadatenVerzeichnis=../../../../src/test/resources/metadata/
+directory.metadata=../../../../src/test/resources/metadata/
 # Path to directory in which BPMN diagrams are stored
-diagramsFolder=../../../../src/test/resources/diagrams/
+directory.diagrams=../../../../src/test/resources/diagrams/
 # Absolute path to the base directory of the users' home directories,
 # terminated by a directory separator ("/").
 # If a user accepts a task to work on which
@@ -53,11 +53,10 @@ diagramsFolder=../../../../src/test/resources/diagrams/
 # a symbolic link to the process directory in question will be created in his
 # or her home directory that will be removed again after finishing the task.
 # Note: If LDAP is used, the users' home dirs will instead be read from LDAP
-dir_Users=../../../../src/test/resources/users/
-#dir_Users=/home/
+directory.users=../../../../src/test/resources/users/
 # Absolute path to a folder the application can temporarily create files in,
 # terminated by a directory separator ("/").
-tempfolder=../../../resources/tmp/
+directory.temp=../../../resources/tmp/
 # -----------------------------------
 # Directory management
 # -----------------------------------
@@ -139,7 +138,7 @@ doneDirectoryName=fertig/
 # Note: If this directory DOESN'T EXIST, the internal resource bundles will be
 #       used. If this directory exists BUT DOES NOT CONTAIN suitable resources,
 #       the screens will not work as expected.
-localMessages=../../../resources/messages/
+directory.messages=../../../resources/messages/
 # Start-up language: If not set, Kitodo.Production will start up with the
 # language best matching the user's Accept-Languages HTTP Request header. You
 # can override this behaviour by setting a default language here:
@@ -455,7 +454,7 @@ err_emailAddress1=
 # Debug folder
 # -----------------------------------
 # Falls Dateien zum Debuggen / Tracen geschrieben werden sollen, hier ein Verzeichnis angeben
-debugFolder=../../../resources/debug/
+directory.debug=../../../resources/debug/
 # =============================================================================
 #      FUNCTIONAL EXTENSIONS
 # =============================================================================
@@ -465,7 +464,7 @@ debugFolder=../../../resources/debug/
 show_modulemanager=true
 kitodoModuleServerPort=8000
 
-moduleFolder=../../../../modules
+directory.modules=../../../../modules
 
 # -----------------------------------
 # OCR service access
@@ -482,7 +481,7 @@ ocrUrl=
 # The plugins directory must contain a subfolder for each plugin type, which
 # must be named "command", "import", "opac", "step" and "validation", resp.
 # In each folder .jar files containing plugin implementations can be placed.
-pluginFolder=../../../resources/plugins/
+directory.plugins=../../../resources/plugins/
 massImportAllowed=true
 useWebApi=true
 # -----------------------------------
