--- a/Kitodo/src/test/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/kitodo_config.properties
@@ -44,6 +44,6 @@ elasticsearch.useAuthentication=false
 KonfigurationVerzeichnis=src/test/resources/
 dir_Users=src/test/resources/userdata/
 
-longParameter=2
+MetsEditorLockingTime=2
 
 copyData.onExport=/@GoobiIdentifier \= $process.id;
