Unify naming for mets editor properties

--- a/Kitodo/src/main/resources/kitodo_config.properties
+++ b/Kitodo/src/main/resources/kitodo_config.properties
@@ -227,25 +227,25 @@ catalogue.timeout=1800000
 # -----------------------------------
 
 # locking time in milliseconds
-MetsEditorLockingTime=180000
+metsEditor.lockingTime=180000
 
 # use special image folder for METS editor if exists (define suffix here)
-MetsEditorDefaultSuffix=jpeg
+metsEditor.defaultSuffix=jpeg
 
 # use automatic default pagination
-MetsEditorWithAutomaticPagination=true
+metsEditor.useAutomaticPagination=true
 
 # use special pagination type for automatic default pagination (uncounted, roman, arabic)
-MetsEditorDefaultPagination=uncounted
+metsEditor.defaultPagination=uncounted
 
 # use a maximum of characters to display titles in the left part of mets editor, the default value is 0 (everything is displayed)
-MetsEditorMaxTitleLength=0
+metsEditor.maxTitleLength=0
 
 # initialise all sub elements in Mets editor to assign default values, default value is true
-MetsEditorEnableDefaultInitialisation=true
+metsEditor.enableDefaultInitialisation=true
 
 # display the file manipulation dialog within the mets editor
-MetsEditorDisplayFileManipulation=true
+metsEditor.displayFileManipulation=true
 
 # Comma-separated list of separators available for pagination modes where two
 # pages are on one image. Enclose in double quotes if contains white space or
@@ -254,7 +254,7 @@ MetsEditorDisplayFileManipulation=true
 # pageSeparators=" ",",",;," , "," ; "," / "
 #
 # Defaults to one single white space:
-pageSeparators=" "
+metsEditor.pageSeparators=" "
 
 
 # -----------------------------------
@@ -414,8 +414,8 @@ batches.logChangesToWikiField=false
 
 pdfAsDownload=true
 
-# If empty, internal GoobiContentServer will be used, make sure
-# to configure it in goobiContentServerConfig.xml
+# If empty, internal KitodoContentServer will be used, make sure
+# to configure it in kitodoContentServerConfig.xml
 # Example: http://localhost:8080/kitodo/gcs/gcs?action=pdf\&metsFile=
 kitodoContentServerUrl=
 
@@ -437,26 +437,26 @@ kitodoContentServerTimeOut=30000
 #taskManager.inspectionIntervalMillis=2000
 
 # Sets the maximum number of failed threads to keep around in RAM. Defaults to
-# 10. Keep in mind that zombie processes still occupy all their ressources and
+# 10. Keep in mind that zombie processes still occupy all their resources and
 # aren't available for garbage collection, so choose these values as
 # restrictive as possible.
 #taskManager.keepThreads.failed.count=10
 
 # Sets the maximum time to keep failed threads around in RAM. Defaults to
 # 250 minutes (4 hours, 10 minutes). Keep in mind that zombie processes still
-# occupy all their ressources and aren't available for garbage collection, so
+# occupy all their resources and aren't available for garbage collection, so
 # choose these values as restrictive as possible.
 #taskManager.keepThreads.failed.minutes=250
 
 # Sets the maximum number of successfully finished threads to keep around in
 # RAM. Defaults to 3. Keep in mind that zombie processes still occupy all
-# their ressources and aren't available for garbage collection, so choose
+# their resources and aren't available for garbage collection, so choose
 # these values as restrictive as possible.
 #taskManager.keepThreads.successful.count=3
 
 # Sets the maximum time to keep successfully finished threads around in RAM.
 # Defaults to 20 minutes. Keep in mind that zombie processes still occupy all
-# their ressources and aren't available for garbage collection, so choose
+# their resources and aren't available for garbage collection, so choose
 # these values as restrictive as possible.
 #taskManager.keepThreads.successful.minutes=20
 
@@ -549,7 +549,7 @@ ocrUrl=
 # ActiveMQ web services
 # -----------------------------------
 
-# If you want to use Kitodo's ActiveMQ web servic interface, set the host here
+# If you want to use Kitodo's ActiveMQ web service interface, set the host here
 #activeMQ.hostURL=failover:(tcp://localhost:61616?closeAsync=false)
 
 # You can provide a topic that Kitodo reports results and status messages to
@@ -560,7 +560,7 @@ ocrUrl=
 # your needs. 0 will disable the deletion of messages completely. (However,
 # the messages will only available on the Active MQ server if your
 # TopicSubscriber is online with the Active MQ server before the message is
-# sent. You migth therefore consider to configure the timeToLive for offline
+# sent. You might therefore consider to configure the timeToLive for offline
 # usage within the Active MQ server's activemq.xml file by adding a
 #
 #   <policyEntry topic="KitodoProduction.ResultMessages.Topic">
