Unify naming for image properties

--- a/Kitodo/src/test/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/kitodo_config.properties
@@ -32,7 +32,7 @@ script_createDirUserHome=src/test/resources/scripts/script_createDirUserHome.sh
 script_createSymLink=src/test/resources/scripts/script_createSymLink.sh
 script_deleteSymLink=src/test/resources/scripts/script_deleteSymLink.sh
 # Prefix for image names as regex.
-ImagePrefix=.*
+image.prefix=.*
 # -----------------------------------
 # backup of metadata configuration
 # -----------------------------------
