--- a/Kitodo/src/test/resources/selenium/resources/kitodo_config.properties
+++ b/Kitodo/src/test/resources/selenium/resources/kitodo_config.properties
@@ -112,21 +112,21 @@ script_deleteSymLink=../../../../src/test/resources/scripts/script_deleteSymLink
 
 # Prefix for image names as regex. Default is 8 digits \\d{8} and gets
 # validated
-ImagePrefix=\\d{8}
+image.prefix=\\d{8}
 
 # Sorting of images. At this time implemented sorting options:
 # - number (default): 1 is lesser then 002, compares the number of image names,
 #       characters other than digits are not supported
 # - alphanumeric: 1 is greater then 002, compares character by character of
 #       image names, all characters are supported
-ImageSorting=number
+image.sorting=number
 
 # set true if dummy images needs to be created after creation of new process
 # in order to start with pagination editing without existing real images.
 # Number of files will be taken from guessed images value.
 createDummyImagesAtProcessCreation=false
 
-doneDirectoryName=fertig/
+image.doneDirectoryName=fertig/
 
 # =============================================================================
 #      VISUAL APPEARANCE
