--- a/Kitodo/src/main/resources/kitodo_config.properties
+++ b/Kitodo/src/main/resources/kitodo_config.properties
@@ -154,16 +154,16 @@ xsltFilenameMetadataTransformation=MetsModsGoobi_to_MetsKitodo.xsl
 
 # Prefix for image names as regex. Default is 8 digits \\d{8} and gets
 # validated
-ImagePrefix=\\d{8}
+image.prefix=\\d{8}
 
 # Sorting of images. At this time implemented sorting options:
 # - number (default): 1 is lesser then 002, compares the number of image names,
 #       characters other than digits are not supported
 # - alphanumeric: 1 is greater then 002, compares character by character of
 #       image names, all characters are supported
-ImageSorting=number
+image.sorting=number
 
-doneDirectoryName=fertig/
+image.doneDirectoryName=fertig/
 
 
 # =============================================================================
