--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -427,6 +427,31 @@
             <artifactId>xml-resolver</artifactId>
             <version>1.1</version>
         </dependency>
+        <dependency>
+             <groupId>org.im4java</groupId>
+             <artifactId>im4java</artifactId>
+             <version>1.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-exec</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openpreservation.jhove</groupId>
+            <artifactId>jhove-core</artifactId>
+            <version>${jhove.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openpreservation.jhove</groupId>
+            <artifactId>jhove-modules</artifactId>
+            <version>${jhove.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openpreservation.jhove</groupId>
+            <artifactId>jhove-ext-modules</artifactId>
+            <version>${jhove.version}</version>
+        </dependency>
 
         <!-- Libraries from Slub-Nexus repository -->
         <dependency>
