--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,7 @@
         <module>Kitodo-DataManagement</module>
         <module>Kitodo-API</module>
         <module>Kitodo-DataEditor</module>
+        <!--Due to connection problems with loc.gov, we are not able to use this module-->
         <!--<module>Kitodo-DataFormat</module>-->
         <module>Kitodo-ImageManagementModule</module>
         <module>Kitodo-LongTimePreservationValidationModule</module>
