--- a/Kitodo-FileManagement/pom.xml
+++ b/Kitodo-FileManagement/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <artifactId>kitodo-production</artifactId>
         <groupId>org.kitodo</groupId>
-        <version>3.0-SNAPSHOT</version>
+        <version>3.0.0-beta.1</version>
     </parent>
     <organization>
         <name>kitodo.org</name>
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>org.kitodo</groupId>
             <artifactId>kitodo-api</artifactId>
-            <version>3.0-SNAPSHOT</version>
+            <version>3.0.0-beta.1</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
