--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>org.kitodo</groupId>
         <artifactId>kitodo-production</artifactId>
-        <version>3.0-SNAPSHOT</version>
+        <version>3.0.0-beta.1</version>
     </parent>
     <organization>
         <name>kitodo.org</name>
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>org.kitodo</groupId>
             <artifactId>kitodo-data-management</artifactId>
-            <version>3.0-SNAPSHOT</version>
+            <version>3.0.0-beta.1</version>
         </dependency>
         <dependency>
             <groupId>org.kitodo</groupId>
