--- a/Kitodo-DataManagement/pom.xml
+++ b/Kitodo-DataManagement/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>kitodo-production</artifactId>
         <groupId>org.kitodo</groupId>
-        <version>3.0-SNAPSHOT</version>
+        <version>3.0.0-beta.1</version>
     </parent>
     <organization>
         <name>kitodo.org</name>
