--- a/Kitodo-Command/pom.xml
+++ b/Kitodo-Command/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <artifactId>kitodo-production</artifactId>
         <groupId>org.kitodo</groupId>
-        <version>3.0.0-beta.1</version>
+        <version>3.0.0-beta.1-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>org.kitodo</groupId>
             <artifactId>kitodo-api</artifactId>
-            <version>3.0.0-beta.1</version>
+            <version>3.0.0-beta.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
