--- a/Kitodo-DataEditor/pom.xml
+++ b/Kitodo-DataEditor/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <artifactId>kitodo-production</artifactId>
         <groupId>org.kitodo</groupId>
-        <version>3.0.0-beta.1</version>
+        <version>3.0.0-beta.1-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -31,13 +31,13 @@
         <dependency>
             <groupId>org.kitodo</groupId>
             <artifactId>kitodo-api</artifactId>
-            <version>3.0.0-beta.1</version>
+            <version>3.0.0-beta.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.kitodo</groupId>
             <artifactId>kitodo-data-format</artifactId>
-            <version>3.0.0-beta.1</version>
+            <version>3.0.0-beta.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
