Update mapping with changed user group and client relationship

--- a/Kitodo/src/main/resources/mapping.json
+++ b/Kitodo/src/main/resources/mapping.json
@@ -859,12 +859,12 @@
                         }
                     }
                 },
-                "clients": {
+                "client": {
                     "properties": {
                         "id": {
                             "type": "long"
                         },
-                        "clientName": {
+                        "name": {
                             "type": "text",
                             "fields": {
                                 "keyword": {
