--- a/Kitodo/src/main/resources/mapping.json
+++ b/Kitodo/src/main/resources/mapping.json
@@ -77,7 +77,7 @@
                         }
                     }
                 },
-                "userGroups": {
+                "roles": {
                     "properties": {
                         "id": {
                             "type": "long"
@@ -778,7 +778,7 @@
                 "typeMetadata": {
                     "type": "boolean"
                 },
-                "userGroups": {
+                "roles": {
                     "properties": {
                         "id": {
                             "type": "long"
@@ -787,7 +787,7 @@
                 }
             }
         },
-        "userGroup": {
+        "role": {
             "dynamic": "strict",
             "properties": {
                 "title": {
@@ -1070,7 +1070,7 @@
                         }
                     }
                 },
-                "userGroups": {
+                "roles": {
                     "properties": {
                         "id": {
                             "type": "long"
